@@ -12,6 +12,7 @@ Version 5.1.3 -
     overrides for Membership.CreateUser to work.    
   - Added 'Respect Binary Flags' connection string option to allow existing applications
     to select the old behavior of not always respecting the binary flags of a columns.
+  - Added ability to use blobs to store true UTF-8 data (see help)
     
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
